03-Project1/terraform/05-apps/manifests/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ingress-class-app
  annotations:
    "ingressclass.kubernetes.io/is-default-class": "true"
spec:
  controller: ingress.k8s.aws/alb
