03-Project1/terraform/05-apps/manifests/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ingress-argo
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # External DNS - For creating a Record Set in Route53
    external-dns.alpha.kubernetes.io/hostname: ingress-argo.pecs-operations-dev.nl.lexis.com
    alb.ingress.kubernetes.io/conditions.argogrpc: |
      [{"field":"http-header","httpHeaderConfig":{"httpHeaderName": "Content-Type", "values":["application/grpc"]}}]

spec:
  ingressClassName: alb
  tls:
  - hosts:
    - "*.pecs-operations-dev.nl.lexis.com"
  rules:
    - host: ingress-argo.pecs-operations-dev.nl.lexis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argogrpc
                port:
                  number: 443
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
