03-Project1/terraform/05-apps/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: ingress-app
    # Ingress Core Settings
    #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource)
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'   
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:180789647333:certificate/0d86500a-08b3-4f17-8fb4-f09532ba0522
    #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)    
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # External DNS - For creating a Record Set in Route53
    external-dns.alpha.kubernetes.io/hostname: ingress-app.pecs-operations-dev.nl.lexis.com
spec:
  ingressClassName: ingress-class-app   # Ingress Class                  
  defaultBackend:
    service:
      name: welcome-np-service
      port:
        number: 80     
  # SSL Certificate Discovery using TLS        
  tls:
  - hosts:
    - "*.pecs-operations-dev.nl.lexis.com"
  rules:
    - http:
        paths:
          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: tasks-np-service
                port: 
                  number: 80  
    - http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users-np-service
                port: 
                  number: 3002
    - http:
        paths:
          - path: /images
            pathType: Prefix
            backend:
              service:
                name: images-np-service
                port: 
                  number: 3003
